--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "@emotion/react": "^11.1.2",
     "@emotion/styled": "^11.0.0",
     "autoprefixer": "^10.1.0",
+    "fecha": "^4.2.0",
     "firebase": "^8.2.1",
+    "firebase-admin": "^9.4.2",
+    "formik": "^2.2.6",
     "framer-motion": "^3.1.1",
     "next": "10.0.0",
     "postcss": "^8.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "tailwindcss": "^2.0.2"
+    "swr": "^0.3.11",
+    "tailwindcss": "^2.0.2",
+    "yup": "^0.32.8"
   }
 }
